stage4-k8s-configs/app-deployment.yaml
# stage4-k8s-configs/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-diploma-app
  labels:
    app: netology-diploma-app
spec:
  replicas: 2 # High availability across nodes
  selector:
    matchLabels:
      app: netology-diploma-app
  template:
    metadata:
      labels:
        app: netology-diploma-app
    spec:
      imagePullSecrets:
        - name: ycr-secret
      containers:
        - name: nginx
          image: cr.yandex/__REGISTRY_ID__/netology-diploma-app:v1.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
