stage4-k8s-configs/app-service.yaml
# stage4-k8s-configs/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-diploma-app-service
spec:
  selector:
    app: netology-diploma-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
